--- a/circle.yml
+++ b/circle.yml
@@ -25,15 +25,15 @@ dependencies:
         - /usr/local/android-sdk-linux/build-tools/23.0.3
 
 # Comment the test stuff out (or remove it) if you don't need it.
-test:
-  pre:
-    - emulator -avd circleci-android23 -no-audio -no-window:
-          background: true
-          parallel: true
-    - circle-android wait-for-boot
+#test:
+#  pre:
+#    - emulator -avd circleci-android23 -no-audio -no-window:
+#          background: true
+#          parallel: true
+#    - circle-android wait-for-boot
     # unlock emulator
-    - sleep 30
-    - adb shell input keyevent 82
+#    - sleep 30
+#    - adb shell input keyevent 82
 
   override:
 #    - ./gradlew clean assemble
