--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,7 @@ dependencies:
         - /usr/local/android-sdk-linux/build-tools/23.0.3
 
 # Comment the test stuff out (or remove it) if you don't need it.
-#test:
+test:
 #  pre:
 #    - emulator -avd circleci-android23 -no-audio -no-window:
 #          background: true
