--- a/circle.yml
+++ b/circle.yml
@@ -42,4 +42,4 @@ test:
 
   post:
       - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-      - cp -r app/build/outputs/androidTest-results/connected/ $CIRCLE_TEST_REPORTS
+  #    - cp -r app/build/outputs/androidTest-results/connected/ $CIRCLE_TEST_REPORTS
